fix: spacing searchbar

--- a/css/tabEditor.css
+++ b/css/tabEditor.css
@@ -1,12 +1,11 @@
 #tab-editor {
-  padding: 0.75rem;
+  padding: 1rem 0.75rem;
   width: 100%;
   display: flex;
   height: 100%;
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-  margin-bottom: 1.5rem;
-  padding-bottom: 0.75rem;
+  margin-bottom: 0.75rem;
   transform-origin: top left;
   z-index: 1;
 }
